Fix Guides Z-Index

--- a/src/components/guides/Guides.css
+++ b/src/components/guides/Guides.css
@@ -3,6 +3,7 @@
   height: 100%;
   width: 100%;
   pointer-events: none;
+  z-index: 100;
 }
 
 .cl-row-guide{
